k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dimito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: github-registry
      containers:
      - name: frontend
        image: ghcr.io/manouchehri-dev/dimito-frontend:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1500m"
            memory: "2560Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dimito
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
